# django-ios-storekit

./: .coveragerc  .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: linter.yml  release.yml  tests.yml
demo/app/: urls.py  views.py
demo/demo/: settings.py  urls.py
example/: requirements.txt
example/app/: views.py
example/example/: settings.py
example/examples/: settings.py  urls.py
storekit/: admin.py  apps.py  appstore.py  errors.py  fields.py  models.py  receipt.py  views.py
storekit/migrations/: 0001_initial.py  0002_auto_20171014_2220.py  0002_auto_20171218_2351.py  0003_auto_20171219_0021.py  0004_auto_20180605_1629.py  0005_auto_20180609_1654.py
storekit/tests/: compatibility.py  response.json  test_appstore.py  test_errors.py  test_models.py  test_receipt.py
tests/: conftest.py  response.json  settings.py  test_appstore.py  test_errors.py  test_models.py  test_receipt.py  testing.py
tests/test_models/: conftest.py  test_in_app.py  test_receipt.py  test_response.py
