[metadata]
name = django-ios-storekit
version = attr: storekit.__version__
url = https://github.com/nnsnodnb/django-ios-storekit
author = Yuya Oka
author_email = nnsnodnb@gmail.com
license = MIT
description = A Django plugin for iOS In-App Purchases.
keywords =
  django
  ios
  in-app-purchases
  apple
classifiers =
  Environment :: Web Environment
  Framework :: Django
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Internet :: WWW/HTTP
  Topic :: Software Development :: Libraries :: Application Frameworks
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
